# RIFT.ware

./: .gitmodules  CMakeLists.txt  Makefile  README.md  RIFTWARE_COMPILATION_LICENSE  ReleaseNotes.txt  rift-bashrc  rift-shell  rift_env.py
cmake/examples/foo/: CMakeLists.txt
cmake/examples/foo/app/: CMakeLists.txt  foo_app.c
cmake/examples/foo/lib/: CMakeLists.txt  foo_lib.c  foo_lib.h
modules/core/mano/examples/ping_pong_ns/: CMakeLists.txt  config_desc.py  generate_packages.sh.in
modules/core/mano/examples/ping_pong_ns/ping_pong_ns/: __init__.py  ping.py  pong.py  prepare_ping_pong_qcow.sh  start_ping.py  start_pong.py
modules/core/mano/rwcm/plugins/yang/: CMakeLists.txt  rw-conman.tailf.yang  rw-conman.yang
modules/core/mano/rwlaunchpad/ra/: CMakeLists.txt  pingpong_records_systest  pingpong_vnf_systest
modules/core/mano/rwlaunchpad/ra/pytest/: conftest.py  test_pingpong_vnf.py  test_pingpong_vnf_static.py  test_records.py  test_startstop.py
modules/core/mano/rwlaunchpad/ra/racfg/: pingpong_records_systest_openstack.racfg  pingpong_vnf_systest_cloudsim.racfg  pingpong_vnf_systest_openstack.racfg
modules/core/mgmt/rwmgmt-api/: CMakeLists.txt  README.ad  build.sh
modules/core/mgmt/rwmgmt-api/etc/: rwmgmtapigw.wsgi  wsgi.conf
modules/core/mgmt/rwmgmt-api/rwmgmtapi/: __init__.py  artifacts.py  confd.py  internal.py  rest.py  route.py  rwapp.py  rwxml.py  stats.py  web_stats.py  ws.py  xml2json.py
modules/core/mgmt/rwmgmt-api/rwmgmtapi/app/: __init__.py  cache.py  cors.py
modules/core/mgmt/rwmgmt-api/rwmgmtapi/fpath/: __init__.py  fpath.py  route.py
modules/core/mgmt/rwmgmt-api/rwmgmtapi/model/: __init__.py  browser.py  route.py
modules/core/mgmt/rwmgmt-api/rwmgmtapi/test/: test_confd.py  test_rwxml.py  test_stats.py  test_xml2json.py  util.py  xmlcompare.py
modules/core/mgmt/rwmgmt-api/rwmgmtapi/vcs/: __init__.py  route.py  vcs.py
modules/core/mgmt/rwmgmt-api/rwmgmtapi/vnf/: __init__.py  route.py  vnf.py
modules/core/mgmt/rwmgmt-ui/: CMakeLists.txt  Makefile  bower.json  config.html  gruntfile.js  gruntfile.js.bak  gulpFile.js  index.html  integration.html  karma.conf.js  login.html  old_index.html  package.json
modules/core/mgmt/rwmgmt-ui/.idea.bak/: .name  workspace.xml
modules/core/mgmt/rwmgmt-ui/launchpad/: config
modules/core/mgmt/rwmgmt-ui/lib/: README.txt
modules/core/mgmt/rwmgmt-ui/lib/chai/: .bower.json
modules/core/mgmt/rwmgmt-ui/lib/core-doc-viewer/: .bower.json
modules/core/mgmt/rwmgmt-ui/lib/core-icon/: .bower.json
modules/core/mgmt/rwmgmt-ui/lib/core-iconset-svg/: .bower.json
modules/core/mgmt/rwmgmt-ui/lib/core-selector/: .bower.json
modules/core/mgmt/rwmgmt-ui/lib/core-splitter/: .bower.json
modules/core/mgmt/rwmgmt-ui/lib/d3.chart/: .bower.json
modules/core/mgmt/rwmgmt-ui/lib/google-code-prettify/: README-zh-Hans.html  README.html
modules/core/mgmt/rwmgmt-ui/lib/jsonpath/: .bower.json
modules/core/mgmt/rwmgmt-ui/lib/less/: .bower.json
modules/core/mgmt/rwmgmt-ui/lib/mock-socket/: .bower.json
modules/core/mgmt/rwmgmt-ui/lib/ng-websocket/: ng-websocket.js
modules/core/mgmt/rwmgmt-ui/lib/numeral/: .bower.json
modules/core/mgmt/rwmgmt-ui/lib/polymer/: .bower.json
modules/core/mgmt/rwmgmt-ui/lib/sinonjs/: .bower.json
modules/core/mgmt/rwmgmt-ui/lib/socket.io-client/: .bower.json
modules/core/mgmt/rwmgmt-ui/lib/sparkline/: .bower.json
modules/core/mgmt/rwmgmt-ui/lib/splitter_bck/: .bower.json  splitter.js
modules/core/mgmt/rwmgmt-ui/lib/web-animations-js/: web-animations-next-lite.dev.html  web-animations-next.dev.html  web-animations.dev.html  web-animations.html
modules/core/mgmt/rwmgmt-ui/src/: app.js  core.css  core.less  ui2.html  upgrade.html
modules/core/mgmt/rwmgmt-ui/tasks/: copy.js  less.js  modules.js
modules/core/mgmt/rwmgmt-ui/test/: js-network-test.html  js-rwmgmt-test.html  js-vcs-test.html  rw-bargraph-test.html  rw-bullet-test.html  rw-config-viewer-test.html  rw-dashboard-control-test.html  rw-dashboard-iface-netstat-test.html  rw-dashboard-test.html  rw-donut-test.html  rw-fpath-model-test.html  rw-gauge-test.html  rw-gaugeset-test.html  rw-geo-map-test.html  rw-geo-model-test.html  rw-iface-details-test.html  rw-js-test.html  rw-loadbal-model-test.html  rw-loadbal-stats-test.html  rw-ltesim-details-test.html  rw-ltesim-summary-test.html  rw-network-diagram-test.html  rw-radial-diagram-test.html  rw-resource-detail-test.html  rw-resource-metric-test.html  rw-resource-test.html  rw-scatter-test.html  rw-scroll-graph-test.html  rw-services-model-test.html  rw-slb-config-test.html  rw-slb-details-test.html  rw-slider-test.html  rw-system-resources-model-test.html  rw-tabs-test.html  rw-tg-rate-test.html  rw-top-nav-test.html  rw-topology-test.html  rw-traffic-diagram-test.html  rw-trafgen-stats-test.html  rw-trafsim-details-test.html  (+7 more)
modules/core/mgmt/rwmgmt-ui/test/components/: bullet.html  (+48 more)
modules/core/mgmt/rwmgmt-ui/tools/: bin.css  bin.html  bin.js  bin.less  confd.html  offline.css  offline.html  offline.less  ports.html  sort.html  top.css  top.html  top.less  trafgen.html  trafsim.html  ws.html
modules/core/mgmt/rwnetconf/gi/: CMakeLists.txt  rwnetconf_gi.c  rwnetconf_gi.h  rwnetconf_gi_clean.h  rwnetconf_gi_filter.py
modules/core/mgmt/rwnetconf/src/: CMakeLists.txt  rwnc_cbmgr.cpp  rwnc_ds.cpp  rwnc_filter.cpp  rwnc_instance.cpp  rwnc_session.cpp  rwnc_session_impl.hpp  rwnc_transport.cpp  rwnc_user.cpp  rwnc_xml.cpp  rwnc_xml_impl.cpp  rwnc_xml_impl.hpp
modules/core/rwvx/rwsched/utcli/: CMakeLists.txt  rwsched_utcli.cpp
modules/core/util/rwcmdargs/src/: CMakeLists.txt  rwcmdargs.cpp
modules/core/util/rwcmdargs/test/: CMakeLists.txt  rwcmdargs-test.xml  rwcmdargs-test.yang  rwcmdargs_test.cpp  rwcmdargs_test_cli.cpp
modules/core/util/rwutcli/src/: CMakeLists.txt  rwutcli.cpp
modules/core/util/rwutcli/test/: CMakeLists.txt  test_main.cpp  test_rwutcli.cpp  test_rwutcli.yang
modules/core/util/yangtools/rwyangutil/: CMakeLists.txt  rwyangutil.cc  rwyangutil.h
modules/ext/mgmt/loganalyzer/: CMakeLists.txt
modules/yang_composite/: CMakeLists.txt
(+3160 files in other folders)
